bk_ida/gccida/g0/propagate_one_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2047:20: error: expected identifier or '('
unsigned __int64 *(short *)0x_0; // [rsp+48h] [rbp-88h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2047:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2047:19: note: to match this '('
unsigned __int64 *(short *)0x_0; // [rsp+48h] [rbp-88h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2048:16: error: expected identifier or '('
unsigned int *(short *)0xnum__0; // [rsp+50h] [rbp-80h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2048:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2048:15: note: to match this '('
unsigned int *(short *)0xnum__0; // [rsp+50h] [rbp-80h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2057:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+90h] [rbp-40h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2057:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2057:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+90h] [rbp-40h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2058:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+98h] [rbp-38h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2058:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2058:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+98h] [rbp-38h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2066:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
prev = (  struct rtx_def *)insn[1]; 
                           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2071:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
return ( rtx)insn[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2087:64: error: too many arguments provided to function-like macro invocation
fatal_insn( "Attempt to delete prologue/epilogue insn:", insn, "flow.c", 1615, "propagate_one_insn"); 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2087:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "Attempt to delete prologue/epilogue insn:", insn, "flow.c", 1615, "propagate_one_insn"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2116:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2120:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2124:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ <= 1 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2126:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2126:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2127:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/flow.c:2131:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/propagate_one_insn/src/obj/flow.o] Error 1
